# hangul-shapeshift

./: .gitignore  README.md  pyproject.toml  setup.py  test.ipynb
src/hangul_shapeshift/: __init__.py  constant.py  shift.py
