[project]
name = "hangul-shapeshift_ne0ekspert"
version = "0.1.0"
authors = [
    { name="ne0ekspert", email="rlaaudwk5503@gmail.com" }
]
description = "Hangul transition with similar looking characters"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = ['jamo', 'networkx']

[project.urls]
Homepage = "https://github.com/ne0ekspert/hangul-shapeshift"
Issues = "https://github.com/ne0ekspert/hangul-shapeshift/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}